[package]

name = "mtbl"
version = "0.1.0"
authors = ["Leon Barrett <leon@barrettnexus.com>"]

description = "Bindings to the MTBL C library (https://github.com/farsightsec/mtbl)"
repository = "https://github.com/leon-barrett/mtbl-rs"
homepage = "https://github.com/leon-barrett/mtbl-rs"
documentation = "https://leon-barrett.github.io/mtbl-rs/mtbl/index.html"
readme = "README.md"
keywords = ["bindings", "database", "mtbl", "cdb"]
license = "MIT/Apache-2.0"

[lib]
doctest = false

[dependencies]
libc = "0.2.15"
mtbl-sys = "0.1.1"

[dev-dependencies]
lz4 = "1.18.131"
rand = "0.3.14"
tempfile = "2.1.4"
